# battleship-revamp-retro

./: .env  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  start-dev.bat  start-prod.bat  t
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  deploy.yml  scan.yml  security.yml  trivy.yml
docker/pgadmin/: servers.json
scripts/: init-dev-data.sql  init.sql
src/: __init__.py
src/ai/: ai_opponent.py  battleship_ai.py
src/api/core/: __init__.py  database.py  security.py
src/api/models/: __init__.py  user.py
src/api/routes/: ai_routes.py  auth_routes.py  game_routes.py  scores.py  scores_routes.py
src/battleship/: main.py
src/battleship/ai/: opponent.py  strategies.py
src/battleship/api/routes/: ai.py  auth.py  game.py  scores.py
src/battleship/auth/: schemas.py  service.py  sso.py  views.py
src/battleship/core/: config.py  database.py  result.py  security.py
src/battleship/game/: engine.py
src/battleship/users/: models.py
src/battleship/web/static/css/: retro.css
src/battleship/web/static/js/: game-engine.js
src/battleship/web/templates/: _auth_result.html  _board.html  _game_status.html  _scores_tbody.html  ai.html  ai_board_partial.html  ai_game.html  base.html  game.html  home.html  scores.html  signin.html  signup.html
src/game/: game_engine.py
static/css/: retro.css
templates/: _auth_result.html  _board.html  _game_status.html  _scores_tbody.html  ai.html  ai_board_partial.html  ai_game.html  base.html  game.html  home.html  scores.html  signin.html  signup.html
tests/: conftest.py  db_bootstrap_test.py
tests/integration/: ai_routes_test.py  api_test.py  auth_flow_test.py  game_engine_test.py  game_routes_test.py  test_ai_routes.py  test_api.py  test_auth_flow.py  test_game_engine.py  test_game_routes.py
tests/unit/: auth_test.py  game_engine_test.py  game_routes_test.py  main_test.py  test_main.py
