[tool.poetry]
name = "battleship-revamp-retro"
version = "0.1.0"
description = "Retro Battleship game with FastAPI, HTMX, and modern DevOps."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
# Support 3.12 and 3.13, but you're currently on 3.13
python = ">=3.12,<3.14"



# Web framework
fastapi = ">=0.111,<1.0"
uvicorn = { extras = ["standard"], version = ">=0.30,<1.0" }
httpx = ">=0.27,<0.28"
jinja2 = ">=3.1,<4.0"
python-multipart = ">=0.0.12,<0.1"

# Database (psycopg3 sync)
psycopg = { version = ">=3.2,<4.0", extras = ["binary"] }
sqlalchemy = ">=2.0,<3.0"

# Security & Auth
passlib = { extras = ["argon2"], version = ">=1.7,<2.0" }
email-validator = ">=2.1,<3.0"
python-jose = { extras = ["cryptography"], version = ">=3.3,<4.0" }
python-decouple = ">=3.8,<4.0"
pydantic = ">=2.6,<3.0"
ecdsa = ">=0.19.2"

[tool.poetry.group.dev.dependencies]
# Code Quality
ruff = "0.5.6"
mypy = "1.17.0"

# Testing
pytest = "8.4.1"
pytest-asyncio = "1.1.0"
pytest-cov = "5.0.0"
coverage = { extras = ["toml"], version = "7.6.1" }

# Dev Tools
pre-commit = "4.0.1"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
# Select: Pyflakes, pycodestyle, isort, flakes
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"] # Let formatter handle line length usually, don't strict fail

[tool.ruff.lint.isort]
known-first-party = ["src"]
